overflow hidden fix for mobile v5

--- a/src/components/Portfolio/MobileBox.scss
+++ b/src/components/Portfolio/MobileBox.scss
@@ -1,6 +1,6 @@
 .carousel-mobile {
-  position: absolute;
-  height: inherit;
+  // position: absolute;
+  height: 100%;
   width: inherit;
   // background-color: nth($colors, $n);
   padding: 10%;
