--- a/src/components/ProjectManagement/Carousel.scss
+++ b/src/components/ProjectManagement/Carousel.scss
@@ -12,7 +12,7 @@
   position: relative;
 
   &.mobile-version {
-    margin-top: -5%;
+    margin-top: 0%;
     height: 100%;
     width: 100%;
   }
